typed up readMe and added some styling to the HTML

--- a/output/team.html
+++ b/output/team.html
@@ -8,7 +8,7 @@
     <title>My Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
 </head>
 
@@ -30,9 +30,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">ID: 56</li>
             <li class="list-group-item">Email: <a href="mailto:alex.sanders@gapac.com">alex.sanders@gapac.com</a></li>
-            <li class="list-group-item">Office number: 42</li>
+            <li class="list-group-item">Office number: 5</li>
         </ul>
     </div>
 </div>
@@ -43,7 +43,7 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 24</li>
+            <li class="list-group-item">ID: 1</li>
             <li class="list-group-item">Email: <a href="mailto:jonathan.garcia@gapac.com">jonathan.garcia@gapac.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/jgarcia60" target="_blank" rel="noopener noreferrer">jgarcia60</a></li>
         </ul>
@@ -56,9 +56,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 89</li>
+            <li class="list-group-item">ID: 69</li>
             <li class="list-group-item">Email: <a href="mailto:annika.garcia@synovus.com">annika.garcia@synovus.com</a></li>
-            <li class="list-group-item">School: Iowa</li>
+            <li class="list-group-item">School: University of Iowa</li>
         </ul>
     </div>
 </div>
